# mugiwara-control-panel

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
apps/api/: AGENTS.md  pyproject.toml
apps/api/src/: AGENTS.md  main.py
apps/api/src/app/: AGENTS.md
apps/api/src/modules/: AGENTS.md
apps/api/src/modules/dashboard/: AGENTS.md  router.py  service.py
apps/api/src/modules/git_control/: AGENTS.md  domain.py  git_adapter.py  registry.py  router.py  service.py
apps/api/src/modules/healthcheck/: AGENTS.md  domain.py  registry.py  router.py  service.py  source_adapters.py
apps/api/src/modules/memory/: AGENTS.md  domain.py  router.py  service.py
apps/api/src/modules/mugiwaras/: AGENTS.md  domain.py  router.py  service.py
apps/api/src/modules/skills/: AGENTS.md  domain.py  router.py  service.py
apps/api/src/modules/system/: AGENTS.md  router.py  service.py
apps/api/src/modules/usage/: AGENTS.md  __init__.py  router.py  (+1 more)
apps/api/src/shared/: AGENTS.md  contracts.py
apps/api/tests/: AGENTS.md  test_backup_health_status_manifest_producer.py  test_cronjobs_status_manifest_producer.py  test_docker_runtime_status_manifest_producer.py  test_gateway_status_manifest_producer.py  test_git_control_api.py  test_healthcheck_dashboard_api.py  test_honcho_status_manifest_producer.py  test_memory_api.py  test_mugiwaras_api.py  test_perimeter_api.py  test_project_health_manifest_producer.py  test_shared_contracts.py  test_skills_api.py  test_system_metrics_api.py  test_usage_api.py  test_vault_api.py  test_vault_sync_status_manifest_producer.py
(+515 files in other folders)
